attempting to fix form control text input on mobile and firefox

--- a/src/styles.css
+++ b/src/styles.css
@@ -20,7 +20,7 @@ button,
 }
 
 input[type=text] {
-  width: 70%;
+  width: 240px;
 }
 
 input[type=range] {
